Basic implementation for matching s-expressions.